--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
     </script>
 
     <!-- Firebase Configuration -->
-    <script src="firebaseConfig.js"></script>
+    <script type="module" src="firebaseConfig.js"></script>
     <!-- Custom JS -->
     <script type="module" src="auth.js"></script>
 
