--- a/admin.html
+++ b/admin.html
@@ -35,6 +35,10 @@
         <label for="urlImage">URL-Image:</label>
         <input type="text" class="form-control" id="urlImage" />
       </div>
+      <div class="form-group mt-4">
+        <label for="activo">activo?:</label>
+        <input type="text" class="form-control" id="activo" />
+      </div>
       <button id="createTournament" class="btn btn-primary mt-4">
         Create Tournament
       </button>
