--- a/admin.html
+++ b/admin.html
@@ -39,7 +39,7 @@
         <label for="activo">activo?:</label>
         <input type="text" class="form-control" id="activo" />
       </div>
-      <button id="createTournament" class="btn btn-primary mt-4">
+      <button class="btn btn-primary mt-4" id="createTournament">
         Create Tournament
       </button>
     </div>
