--- a/tournamentManagment.html
+++ b/tournamentManagment.html
@@ -12,7 +12,36 @@
         <h1>Tournament Managment</h1>
       </div>
       <div>
-        <label>Tournament Name: </label>
+        <div>
+          <label>Tournament Name: </label>
+          <span id="tournamentName">Loading...</span>
+        </div>
+        <div>
+          <button id="I_Cuartos">I_Cuartos</button>
+        </div>
+        <div>
+          <button id="I_Semifinales">I_Semifinales</button>
+        </div>
+        <div>
+          <button id="I_Finales">I_Finales</button>
+        </div>
+        <div>
+          <button id="I_TercerCuarto">I_TercerCuarto</button>
+        </div>
+        <div>
+          <button id="I_Cuartos_Resultados">I_Cuartos_Resultados</button>
+        </div>
+        <div>
+          <button id="I_Semis_Resultados">I_Semis_Resultados</button>
+        </div>
+        <div>
+          <button id="I_Finales_Resultados">I_Finales_Resultados</button>
+        </div>
+        <div>
+          <button id="I_TercerCuarto_Resultados">
+            I_TercerCuarto_Resultados
+          </button>
+        </div>
       </div>
     </div>
 
