--- a/tournamentManagment.html
+++ b/tournamentManagment.html
@@ -1,68 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin Page</title>
-  </head>
-  <body>
-    <link rel="stylesheet" href="styles.css" />
-    <div>
-      <div class="label">
-        <h1>Tournament Managment</h1>
-      </div>
-      <div>
-        <div>
-          <label>Tournament Name: </label>
-          <span id="tournamentName">Loading...</span>
-        </div>
-        <div>
-          <button id="I_Cuartos">I_Cuartos</button>
-        </div>
-        <div>
-          <button id="I_Semifinales">I_Semifinales</button>
-        </div>
-        <div>
-          <button id="I_Finales">I_Finales</button>
-        </div>
-        <div>
-          <button id="I_TercerCuarto">I_TercerCuarto</button>
-        </div>
-        <div>
-          <button id="I_Cuartos_Resultados">I_Cuartos_Resultados</button>
-        </div>
-        <div>
-          <button id="I_Semis_Resultados">I_Semis_Resultados</button>
-        </div>
-        <div>
-          <button id="I_Finales_Resultados">I_Finales_Resultados</button>
-        </div>
-        <div>
-          <button id="I_TercerCuarto_Resultados">
-            I_TercerCuarto_Resultados
-          </button>
-        </div>
-      </div>
-    </div>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" href="style.css" />
+		<title>Admin Page</title>
+	</head>
+	<body>
+		<link rel="stylesheet" href="styles.css" />
+		<div>
+			<div class="label">
+				<h1>Tournament Managment</h1>
+			</div>
+			<div>
+				<div>
+					<label>Tournament Name: </label>
+					<span id="tournamentName">Loading...</span>
+				</div>
+				<div>
+					<button onclick="handleModal('modalCuartos')" id="I_Cuartos">
+						I_Cuartos
+					</button>
+				</div>
+				<div>
+					<button id="I_Semifinales">I_Semifinales</button>
+				</div>
+				<div>
+					<button id="I_Finales">I_Finales</button>
+				</div>
+				<div>
+					<button id="I_TercerCuarto">I_TercerCuarto</button>
+				</div>
+				<div>
+					<button id="I_Cuartos_Resultados">I_Cuartos_Resultados</button>
+				</div>
+				<div>
+					<button id="I_Semis_Resultados">I_Semis_Resultados</button>
+				</div>
+				<div>
+					<button id="I_Finales_Resultados">I_Finales_Resultados</button>
+				</div>
+				<div>
+					<button id="I_TercerCuarto_Resultados">
+						I_TercerCuarto_Resultados
+					</button>
+				</div>
+			</div>
+		</div>
 
-    <script type="module">
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-app.js";
-      import { getAuth } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-auth.js";
-      import { getFirestore } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore.js";
-      import { firebaseConfig } from "./firebaseConfig.js";
+		<!-- MODAL CUARTOS -->
+		<div class="container-fluid modalCont" id="modalCuartos">
+			<div class="row modalBox">
+				<div class="col-12 text-center">
+					<h1>Cargar Jugadores</h1>
+				</div>
+				<div class="col-6">
+					<p class="mb-0 mt-3">Jugador 1</p>
+					<input class="w-100 px-2" type="text" />
+					<p class="mb-0 mt-3">Jugador 2</p>
+					<input class="w-100 px-2" type="text" />
+					<p class="mb-0 mt-3">Jugador 3</p>
+					<input class="w-100 px-2" type="text" />
+					<p class="mb-0 mt-3">Jugador 4</p>
+					<input class="w-100 px-2" type="text" />
+				</div>
+				<div class="col-6">
+					<p class="mb-0 mt-3">Jugador 5</p>
+					<input class="w-100 px-2" type="text" />
+					<p class="mb-0 mt-3">Jugador 6</p>
+					<input class="w-100 px-2" type="text" />
+					<p class="mb-0 mt-3">Jugador 7</p>
+					<input class="w-100 px-2" type="text" />
+					<p class="mb-0 mt-3">Jugador 8</p>
+					<input class="w-100 px-2" type="text" />
+				</div>
+				<div class="col-12 text-center">
+					<button id="finishBtn" class="w-25 mt-4">Cargar Jugadores</button>
+					<button
+						onclick="handleModal('modalCuartos')"
+						id="finishBtn"
+						class="w-25 mt-4"
+					>
+						Cerrar
+					</button>
+				</div>
+			</div>
+		</div>
 
-      // Initialize Firebase
-      const app = initializeApp(firebaseConfig);
-      const auth = getAuth(app);
-      const db = getFirestore(app);
+		<script>
+			let handleModal = (id) => {
+				let modal = document.getElementById(id);
+				if (modal.style.display === "none") {
+					modal.style.display = "block";
+				} else {
+					modal.style.display = "none";
+				}
+			};
+		</script>
 
-      // Make auth and db available globally
-      window.auth = auth;
-      window.db = db;
-    </script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+			integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+			integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+			crossorigin="anonymous"
+		></script>
 
-    <!-- Custom JS -->
-    <script type="module" src="players.js"></script>
-    <script type="module" src="index.js"></script>
-  </body>
+		<script type="module">
+			import { initializeApp } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-app.js";
+			import { getAuth } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-auth.js";
+			import { getFirestore } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore.js";
+			import { firebaseConfig } from "./firebaseConfig.js";
+
+			// Initialize Firebase
+			const app = initializeApp(firebaseConfig);
+			const auth = getAuth(app);
+			const db = getFirestore(app);
+
+			// Make auth and db available globally
+			window.auth = auth;
+			window.db = db;
+		</script>
+
+		<!-- Custom JS -->
+		<script type="module" src="players.js"></script>
+		<script type="module" src="index.js"></script>
+	</body>
 </html>
