--- a/createTournament.html
+++ b/createTournament.html
@@ -62,6 +62,6 @@
 
     <!-- Custom JS -->
     <script type="module" src="players.js"></script>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="createTournament.js"></script>
   </body>
 </html>
