--- a/home.html
+++ b/home.html
@@ -1,34 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Admin Page</title>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+			crossorigin="anonymous"
+		/>
+	</head>
+	<body>
+		<link rel="stylesheet" href="styles.css" />
+		<div class="container mt-5">
+			<div class="row mt-5">
+				<div class="col-lg-3 col-12"></div>
+				<div class="col-lg-6 col-12 text-center">
+					<h1 class="mt-5">Admin Home</h1>
+					<button id="startNewTournament" class="btn btn-primary mt-5">
+						Start a New Tournament
+					</button>
+					<button id="manageTournament" class="btn btn-secondary mt-5">
+						Manage Tournament
+					</button>
+				</div>
+				<div class="col-lg-3 col-12"></div>
+			</div>
+		</div>
 
-    <title>Admin Page</title>
-  </head>
-  <body>
-    <h1>Admin Page</h1>
-    <button id="startNewTournament">Start a New Tournament</button>
-    <button id="manageTournament">Manage Tournament</button>
+		<script>
+			document
+				.getElementById("startNewTournament")
+				.addEventListener("click", () => {
+					window.location.href = "createTournament.html"; // Redirect to the page for starting a new tournament
+				});
 
-    <script>
-      document
-        .getElementById("startNewTournament")
-        .addEventListener("click", () => {
-          window.location.href = "createTournament.html"; // Redirect to the page for starting a new tournament
-        });
+			document
+				.getElementById("manageTournament")
+				.addEventListener("click", () => {
+					window.location.href = "tournamentManagment.html";
+				});
 
-      document
-        .getElementById("manageTournament")
-        .addEventListener("click", () => {
-          window.location.href = "tournamentManagment.html";
-        });
-
-      document
-        .getElementById("manageTournament")
-        .addEventListener("click", () => {
-          window.location.href = "tournamentManagment.html";
-        });
-    </script>
-  </body>
+			document
+				.getElementById("manageTournament")
+				.addEventListener("click", () => {
+					window.location.href = "tournamentManagment.html";
+				});
+		</script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+			integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+			integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+			crossorigin="anonymous"
+		></script>
+	</body>
 </html>
