--- a/tournamentManagment.html
+++ b/tournamentManagment.html
@@ -1,234 +1,150 @@
 <!DOCTYPE html>
+
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <title>Admin Page</title>
-  </head>
-  <body>
-    <link rel="stylesheet" href="styles.css" />
-    <div>
-      <div class="label">
-        <h1>Tournament Managment</h1>
-      </div>
-      <div>
-        <div>
-          <label>Tournament Name: </label>
-          <span id="tournamentName">Loading...</span>
-        </div>
-        <div>
-          <button onclick="handleModal('modalCuartos')" id="I_Cuartos">
-            I_Cuartos
-          </button>
-        </div>
-        <div>
-          <button onclick="handleModal('modalSemis')" id="I_Semifinales">
-            I_Semifinales
-          </button>
-        </div>
-        <div>
-          <button onclick="handleModal('modalFinales')" id="I_Finales">
-            I_Finales
-          </button>
-        </div>
-        <div>
-          <button
-            onclick="handleModal('modalTercerCuarto')"
-            id="I_TercerCuarto"
-          >
-            I_TercerCuarto
-          </button>
-        </div>
-        <div>
-          <button id="I_Cuartos_Resultados">I_Cuartos_Resultados</button>
-        </div>
-        <div>
-          <button id="I_Semis_Resultados">I_Semis_Resultados</button>
-        </div>
-        <div>
-          <button id="I_Finales_Resultados">I_Finales_Resultados</button>
-        </div>
-        <div>
-          <button id="I_TercerCuarto_Resultados">
-            I_TercerCuarto_Resultados
-          </button>
-        </div>
-      </div>
-    </div>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+			crossorigin="anonymous"
+		/>
+		<title>Admin Page</title>
+	</head>
+	<body>
+		<link rel="stylesheet" href="styles.css" />
+		<div class="continer">
+			<div class="row">
+				<div class="col-12 col-lg-2"></div>
+				<div class="col-12 col-lg-8 text-center">
+					<h1 class="mt-5">Tournament Managment</h1>
 
-    <!-- MODAL CUARTOS -->
-    <div class="container-fluid modalCont" id="modalCuartos">
-      <div class="row modalBox">
-        <div class="col-12 text-center">
-          <h1>Cargar Jugadores</h1>
-        </div>
-        <div class="col-6">
-          <p class="mb-0 mt-3">Jugador 1</p>
-          <input class="w-100 px-2" type="text" id="cuartos_player1" />
-          <p class="mb-0 mt-3">Jugador 2</p>
-          <input class="w-100 px-2" type="text" id="cuartos_player2" />
-          <p class="mb-0 mt-3">Jugador 3</p>
-          <input class="w-100 px-2" type="text" id="cuartos_player3" />
-          <p class="mb-0 mt-3">Jugador 4</p>
-          <input class="w-100 px-2" type="text" id="cuartos_player4" />
-        </div>
-        <div class="col-6">
-          <p class="mb-0 mt-3">Jugador 5</p>
-          <input class="w-100 px-2" type="text" id="cuartos_player5" />
-          <p class="mb-0 mt-3">Jugador 6</p>
-          <input class="w-100 px-2" type="text" id="cuartos_player6" />
-          <p class="mb-0 mt-3">Jugador 7</p>
-          <input class="w-100 px-2" type="text" id="cuartos_player7" />
-          <p class="mb-0 mt-3">Jugador 8</p>
-          <input class="w-100 px-2" type="text" id="cuartos_player8" />
-        </div>
-        <div class="col-12 text-center">
-          <button id="cuartos_finishButton" class="w-25 mt-4">
-            Cargar Jugadores
-          </button>
-          <button
-            onclick="handleModal('modalCuartos')"
-            id="closeButton"
-            class="w-25 mt-4"
-          >
-            Cerrar
-          </button>
-        </div>
-      </div>
-    </div>
+					<label class="mt-3">Tournament Name: </label>
+					<span id="tournamentName">Loading...</span>
+					<div class="mt-5">
+						<button onclick="handleModal('modalCuartos')" id="I_Cuartos">
+							Cargar jugadores a Cuartos
+						</button>
 
-    <!-- MODAL Semis -->
-    <div class="container-fluid modalCont" id="modalSemis">
-      <div class="row modalBox">
-        <div class="col-12 text-center">
-          <h1>Cargar Jugadores</h1>
-        </div>
-        <div class="col-6">
-          <p class="mb-0 mt-3">Jugador 1</p>
-          <input class="w-100 px-2" type="text" id="semis_player1" />
-          <p class="mb-0 mt-3">Jugador 2</p>
-          <input class="w-100 px-2" type="text" id="semis_player2" />
-          <p class="mb-0 mt-3">Jugador 3</p>
-          <input class="w-100 px-2" type="text" id="semis_player3" />
-          <p class="mb-0 mt-3">Jugador 4</p>
-          <input class="w-100 px-2" type="text" id="semis_player4" />
-        </div>
-        <div class="col-12 text-center">
-          <button id="semis_finishButton" class="w-25 mt-4">
-            Cargar Jugadores
-          </button>
-          <button
-            onclick="handleModal('modalSemis')"
-            id="closeButton"
-            class="w-25 mt-4"
-          >
-            Cerrar
-          </button>
-        </div>
-      </div>
-    </div>
+						<button id="handleGames">Manejar partidos</button>
+					</div>
+				</div>
+				<div class="col-12 col-lg-2"></div>
+			</div>
+		</div>
 
-    <!-- MODAL Finales -->
-    <div class="container-fluid modalCont" id="modalFinales">
-      <div class="row modalBox">
-        <div class="col-12 text-center">
-          <h1>Cargar Jugadores</h1>
-        </div>
-        <div class="col-6">
-          <p class="mb-0 mt-3">Jugador 1</p>
-          <input class="w-100 px-2" type="text" id="finales_player1" />
-          <p class="mb-0 mt-3">Jugador 2</p>
-          <input class="w-100 px-2" type="text" id="finales_player2" />
-        </div>
-        <div class="col-12 text-center">
-          <button id="finales_finishButton" class="w-25 mt-4">
-            Cargar Jugadores
-          </button>
-          <button
-            onclick="handleModal('modalFinales')"
-            id="closeButton"
-            class="w-25 mt-4"
-          >
-            Cerrar
-          </button>
-        </div>
-      </div>
-    </div>
+		<!-- MODAL CUARTOS -->
+		<div class="container-fluid modalCont" id="modalCuartos">
+			<div class="row modalBox">
+				<div class="col-12 text-center">
+					<h1>Cargar Jugadores</h1>
+				</div>
+				<div class="col-6">
+					<p class="mb-0 mt-3">Jugador 1</p>
+					<input class="w-100 px-2" type="text" id="cuartos_player1" />
+					<p class="mb-0 mt-3">Jugador 2</p>
+					<input class="w-100 px-2" type="text" id="cuartos_player2" />
+					<p class="mb-0 mt-3">Jugador 3</p>
+					<input class="w-100 px-2" type="text" id="cuartos_player3" />
+					<p class="mb-0 mt-3">Jugador 4</p>
+					<input class="w-100 px-2" type="text" id="cuartos_player4" />
+				</div>
+				<div class="col-6">
+					<p class="mb-0 mt-3">Jugador 5</p>
+					<input class="w-100 px-2" type="text" id="cuartos_player5" />
+					<p class="mb-0 mt-3">Jugador 6</p>
+					<input class="w-100 px-2" type="text" id="cuartos_player6" />
+					<p class="mb-0 mt-3">Jugador 7</p>
+					<input class="w-100 px-2" type="text" id="cuartos_player7" />
+					<p class="mb-0 mt-3">Jugador 8</p>
+					<input class="w-100 px-2" type="text" id="cuartos_player8" />
+				</div>
+				<div class="col-12 text-center">
+					<button id="cuartos_finishButton" class="w-25 mt-4">
+						Cargar Jugadores
+					</button>
+					<button
+						onclick="handleModal('modalCuartos')"
+						id="closeButton"
+						class="w-25 mt-4"
+					>
+						Cerrar
+					</button>
+				</div>
+			</div>
+		</div>
 
-    <!-- MODAL Tercer cuarto puesto -->
-    <div class="container-fluid modalCont" id="modalTercerCuarto">
-      <div class="row modalBox">
-        <div class="col-12 text-center">
-          <h1>Cargar Jugadores</h1>
-        </div>
-        <div class="col-6">
-          <p class="mb-0 mt-3">Jugador 1</p>
-          <input class="w-100 px-2" type="text" id="TercerCuarto_player1" />
-          <p class="mb-0 mt-3">Jugador 2</p>
-          <input class="w-100 px-2" type="text" id="TercerCuarto_player2" />
-        </div>
-        <div class="col-12 text-center">
-          <button id="tercerCuarto_finishButton" class="w-25 mt-4">
-            Cargar Jugadores
-          </button>
-          <button
-            onclick="handleModal('modalTercerCuarto')"
-            id="closeButton"
-            class="w-25 mt-4"
-          >
-            Cerrar
-          </button>
-        </div>
-      </div>
-    </div>
+		<!-- MODAL LISTA DE JUGADORES -->
+		<div class="container-fluid modalCont" id="modalPlayers">
+			<div class="row modalBox">
+				<div class="col-12 text-center">
+					<h1 class="mt-3">Lista de Jugadores</h1>
+				</div>
+				<div class="col-12 text-center">
+					<input
+						type="text"
+						id="searchPlayerInput"
+						placeholder="Buscar jugador..."
+						class="w-50 mt-2 mb-3"
+					/>
+				</div>
+				<div class="col-12 players-container">
+					<ul id="playersList"></ul>
+				</div>
+				<div class="col-12 text-center">
+					<button
+						onclick="handleModal('modalPlayers')"
+						id="closePlayersButton"
+						class="w-25 mt-4"
+					>
+						Cerrar
+					</button>
+				</div>
+			</div>
+		</div>
 
-    <script>
-      let handleModal = (id) => {
-        let modal = document.getElementById(id);
-        if (modal.style.display === "none") {
-          modal.style.display = "block";
-        } else {
-          modal.style.display = "none";
-        }
-      };
-    </script>
+		<script>
+			let handleModal = (id) => {
+				let modal = document.getElementById(id);
+				if (modal.style.display === "none") {
+					modal.style.display = "block";
+				} else {
+					modal.style.display = "none";
+				}
+			};
+		</script>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-      crossorigin="anonymous"
-    ></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+			integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+			integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+			crossorigin="anonymous"
+		></script>
 
-    <script type="module">
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-app.js";
-      import { getAuth } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-auth.js";
-      import { getFirestore } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore.js";
-      import { firebaseConfig } from "./firebaseConfig.js";
+		<script type="module">
+			import { initializeApp } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-app.js";
+			import { getAuth } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-auth.js";
+			import { getFirestore } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore.js";
+			import { firebaseConfig } from "./firebaseConfig.js";
 
-      // Initialize Firebase
-      const app = initializeApp(firebaseConfig);
-      const auth = getAuth(app);
-      const db = getFirestore(app);
+			// Initialize Firebase
+			const app = initializeApp(firebaseConfig);
+			const auth = getAuth(app);
+			const db = getFirestore(app);
 
-      // Make auth and db available globally
-      window.auth = auth;
-      window.db = db;
-    </script>
+			// Make auth and db available globally
+			window.auth = auth;
+			window.db = db;
+		</script>
 
-    <!-- Custom JS -->
-    <script type="module" src="players.js"></script>
-    <script type="module" src="index.js"></script>
-    <script type="module" src="tournamentManagment.js"></script>
-  </body>
+		<!-- Custom JS -->
+		<script type="module" src="players.js"></script>
+		<script type="module" src="index.js"></script>
+		<script type="module" src="tournamentManagment.js"></script>
+	</body>
 </html>
