--- a/quarterFinals.html
+++ b/quarterFinals.html
@@ -19,31 +19,59 @@
 				<div class="col-lg-6 col-12 text-center">
 					<h1 class="mt-4">Cuartos de final</h1>
 					<button
-						onclick="handleModal('modal_1')"
+						onclick="handleModal('modal')"
 						id="player_1"
 						class="btn btn-primary mt-3 w-50"
 					>
 						Player 1
 					</button>
-					<button id="player_2" class="btn btn-primary mt-3 w-50">
+					<button
+						onclick="handleModal('modal')"
+						id="player_2"
+						class="btn btn-primary mt-3 w-50"
+					>
 						Player 2
 					</button>
-					<button id="player_3" class="btn btn-primary mt-3 w-50">
+					<button
+						onclick="handleModal('modal')"
+						id="player_3"
+						class="btn btn-primary mt-3 w-50"
+					>
 						Player 3
 					</button>
-					<button id="player_4" class="btn btn-primary mt-3 w-50">
+					<button
+						onclick="handleModal('modal')"
+						id="player_4"
+						class="btn btn-primary mt-3 w-50"
+					>
 						Player 4
 					</button>
-					<button id="player_5" class="btn btn-primary mt-3 w-50">
+					<button
+						onclick="handleModal('modal')"
+						id="player_5"
+						class="btn btn-primary mt-3 w-50"
+					>
 						Player 5
 					</button>
-					<button id="player_6" class="btn btn-primary mt-3 w-50">
+					<button
+						onclick="handleModal('modal')"
+						id="player_6"
+						class="btn btn-primary mt-3 w-50"
+					>
 						Player 6
 					</button>
-					<button id="player_7" class="btn btn-primary mt-3 w-50">
+					<button
+						onclick="handleModal('modal')"
+						id="player_7"
+						class="btn btn-primary mt-3 w-50"
+					>
 						Player 7
 					</button>
-					<button id="player_8" class="btn btn-primary mt-3 w-50">
+					<button
+						onclick="handleModal('modal')"
+						id="player_8"
+						class="btn btn-primary mt-3 w-50"
+					>
 						Player 8
 					</button>
 				</div>
@@ -52,7 +80,7 @@
 		</div>
 
 		<!-- MODAL PLAYER 1 -->
-		<div class="container-fluid modalCont" id="modal_1">
+		<div class="container-fluid modalCont" id="modal">
 			<div class="row modalBox">
 				<div class="col-12 text-center">Player 1</div>
 				<div class="col-4">
@@ -246,7 +274,7 @@
 						Cargar Score
 					</button>
 					<button
-						onclick="handleModal('modal_1')"
+						onclick="handleModal('modal')"
 						id="closeButton"
 						class="w-25 mt-4"
 					>
