--- a/semiFinals.html
+++ b/semiFinals.html
@@ -19,7 +19,7 @@
       <div class="row">
         <div class="col-lg-3 col-12"></div>
         <div class="col-lg-6 col-12 text-center">
-          <h1 class="mt-4">Cuartos de final</h1>
+          <h1 class="mt-4">Semifinales</h1>
           <button
             onclick="handleModal('modal_1')"
             id="player_1"
@@ -35,18 +35,6 @@
           </button>
           <button id="player_4" class="btn btn-primary mt-3 w-50">
             Player 4
-          </button>
-          <button id="player_5" class="btn btn-primary mt-3 w-50">
-            Player 5
-          </button>
-          <button id="player_6" class="btn btn-primary mt-3 w-50">
-            Player 6
-          </button>
-          <button id="player_7" class="btn btn-primary mt-3 w-50">
-            Player 7
-          </button>
-          <button id="player_8" class="btn btn-primary mt-3 w-50">
-            Player 8
           </button>
         </div>
         <div class="col-lg-3 col-12"></div>
