--- a/tournamentManagment.html
+++ b/tournamentManagment.html
@@ -1,194 +1,201 @@
 <!DOCTYPE html>
 
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-			crossorigin="anonymous"
-		/>
-		<title>Admin Page</title>
-	</head>
-	<body>
-		<link rel="stylesheet" href="styles.css" />
-		<div class="continer">
-			<div class="row">
-				<div class="col-12 col-lg-2"></div>
-				<div class="col-12 col-lg-8 text-center">
-					<h1 class="mt-5">Tournament Managment</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
 
-					<label class="mt-3">Tournament Name: </label>
-					<span id="tournamentName">Loading...</span>
-					<div class="mt-5">
-						<button onclick="handleModal('modalCuartos')" id="I_Cuartos">
-							Cargar jugadores a Cuartos
-						</button>
+    <title>Admin Page</title>
+  </head>
+  <body>
+    <link rel="stylesheet" href="styles.css" />
+    <div class="continer">
+      <div class="row">
+        <div class="col-12 col-lg-2"></div>
+        <div class="col-12 col-lg-8 text-center">
+          <h1 class="mt-5">Tournament Managment</h1>
 
-						<button onclick="handleModal('brackets')" id="handleGames">
-							Manejar partidos
-						</button>
-					</div>
-				</div>
-				<div class="col-12 col-lg-2"></div>
-			</div>
-		</div>
+          <label class="mt-3">Tournament Name: </label>
+          <span id="tournamentName">Loading...</span>
+          <div class="mt-5">
+            <button onclick="handleModal('modalCuartos')" id="I_Cuartos">
+              Cargar jugadores a Cuartos
+            </button>
 
-		<!-- MODAL CUARTOS -->
-		<div class="container-fluid modalCont" id="modalCuartos">
-			<div class="row modalBox">
-				<div class="col-12 text-center">
-					<h1>Cargar Jugadores</h1>
-				</div>
-				<div class="col-6">
-					<p class="mb-0 mt-3">Jugador 1</p>
-					<input class="w-100 px-2" type="text" id="cuartos_player1" />
-					<p class="mb-0 mt-3">Jugador 2</p>
-					<input class="w-100 px-2" type="text" id="cuartos_player2" />
-					<p class="mb-0 mt-3">Jugador 3</p>
-					<input class="w-100 px-2" type="text" id="cuartos_player3" />
-					<p class="mb-0 mt-3">Jugador 4</p>
-					<input class="w-100 px-2" type="text" id="cuartos_player4" />
-				</div>
-				<div class="col-6">
-					<p class="mb-0 mt-3">Jugador 5</p>
-					<input class="w-100 px-2" type="text" id="cuartos_player5" />
-					<p class="mb-0 mt-3">Jugador 6</p>
-					<input class="w-100 px-2" type="text" id="cuartos_player6" />
-					<p class="mb-0 mt-3">Jugador 7</p>
-					<input class="w-100 px-2" type="text" id="cuartos_player7" />
-					<p class="mb-0 mt-3">Jugador 8</p>
-					<input class="w-100 px-2" type="text" id="cuartos_player8" />
-				</div>
-				<div class="col-12 text-center">
-					<button id="cuartos_finishButton" class="w-25 mt-4">
-						Cargar Jugadores
-					</button>
-					<button
-						onclick="handleModal('modalCuartos')"
-						id="closeButton"
-						class="w-25 mt-4"
-					>
-						Cerrar
-					</button>
-				</div>
-			</div>
-		</div>
+            <button onclick="handleModal('brackets')" id="handleGames">
+              Manejar partidos
+            </button>
+          </div>
+        </div>
+        <div class="col-12 col-lg-2"></div>
+      </div>
+    </div>
 
-		<!-- MODAL LISTA DE JUGADORES -->
-		<div class="container-fluid modalCont" id="modalPlayers">
-			<div class="row modalBox">
-				<div class="col-12 text-center">
-					<h1 class="mt-3">Lista de Jugadores</h1>
-				</div>
-				<div class="col-12 text-center">
-					<input
-						type="text"
-						id="searchPlayerInput"
-						placeholder="Buscar jugador..."
-						class="w-50 mt-2 mb-3"
-					/>
-				</div>
-				<div class="col-12 players-container">
-					<ul id="playersList"></ul>
-				</div>
-				<div class="col-12 text-center">
-					<button
-						onclick="handleModal('modalPlayers')"
-						id="closePlayersButton"
-						class="w-25 mt-4"
-					>
-						Cerrar
-					</button>
-				</div>
-			</div>
-		</div>
+    <!-- MODAL CUARTOS -->
+    <div class="container-fluid modalCont" id="modalCuartos">
+      <div class="row modalBox">
+        <div class="col-12 text-center">
+          <h1>Cargar Jugadores</h1>
+        </div>
+        <div class="col-6">
+          <p class="mb-0 mt-3">Jugador 1</p>
+          <input class="w-100 px-2" type="text" id="cuartos_player1" />
+          <p class="mb-0 mt-3">Jugador 2</p>
+          <input class="w-100 px-2" type="text" id="cuartos_player2" />
+          <p class="mb-0 mt-3">Jugador 3</p>
+          <input class="w-100 px-2" type="text" id="cuartos_player3" />
+          <p class="mb-0 mt-3">Jugador 4</p>
+          <input class="w-100 px-2" type="text" id="cuartos_player4" />
+        </div>
+        <div class="col-6">
+          <p class="mb-0 mt-3">Jugador 5</p>
+          <input class="w-100 px-2" type="text" id="cuartos_player5" />
+          <p class="mb-0 mt-3">Jugador 6</p>
+          <input class="w-100 px-2" type="text" id="cuartos_player6" />
+          <p class="mb-0 mt-3">Jugador 7</p>
+          <input class="w-100 px-2" type="text" id="cuartos_player7" />
+          <p class="mb-0 mt-3">Jugador 8</p>
+          <input class="w-100 px-2" type="text" id="cuartos_player8" />
+        </div>
+        <div class="col-12 text-center">
+          <button id="cuartos_finishButton" class="w-25 mt-4">
+            Cargar Jugadores
+          </button>
+          <button
+            onclick="handleModal('modalCuartos')"
+            id="closeButton"
+            class="w-25 mt-4"
+          >
+            Cerrar
+          </button>
+        </div>
+      </div>
+    </div>
 
-		<!-- MODAL BRACKETS -->
-		<div class="container-fluid modalCont" id="brackets">
-			<div class="row modalBox">
-				<div class="col-12 text-center">
-					<h1 class="mt-5">Selecciona la bracket</h1>
-				</div>
-				<div class="col-12 text-center">
-					<button id="cuartos" class="w-50 mt-0">Cuartos de final</button>
-				</div>
-				<div class="col-12 text-center">
-					<button class="w-50 mt-0">Semifinales</button>
-				</div>
+    <!-- MODAL LISTA DE JUGADORES -->
+    <div class="container-fluid modalCont" id="modalPlayers">
+      <div class="row modalBox">
+        <div class="col-12 text-center">
+          <h1 class="mt-3">Lista de Jugadores</h1>
+        </div>
+        <div class="col-12 text-center">
+          <input
+            type="text"
+            id="searchPlayerInput"
+            placeholder="Buscar jugador..."
+            class="w-50 mt-2 mb-3"
+          />
+        </div>
+        <div class="col-12 players-container">
+          <ul id="playersList"></ul>
+        </div>
+        <div class="col-12 text-center">
+          <button
+            onclick="handleModal('modalPlayers')"
+            id="closePlayersButton"
+            class="w-25 mt-4"
+          >
+            Cerrar
+          </button>
+        </div>
+      </div>
+    </div>
 
-				<div class="col-12 text-center">
-					<button class="w-50 mt-0">Final Perdedores</button>
-				</div>
+    <!-- MODAL BRACKETS -->
+    <div class="container-fluid modalCont" id="brackets">
+      <div class="row modalBox">
+        <div class="col-12 text-center">
+          <h1 class="mt-5">Selecciona la bracket</h1>
+        </div>
+        <div class="col-12 text-center">
+          <button id="cuartos" class="w-50 mt-0">Cuartos de final</button>
+        </div>
+        <div class="col-12 text-center">
+          <button id="semis" class="w-50 mt-0">Semifinales</button>
+        </div>
 
-				<div class="col-12 text-center">
-					<button class="w-50 mt-0">Final Ganadores</button>
-				</div>
+        <div class="col-12 text-center">
+          <button class="w-50 mt-0">Final Perdedores</button>
+        </div>
 
-				<div class="col-12 text-center">
-					<button id="cuartos_finishButton" class="w-25 mt-4">
-						Cargar Jugadores
-					</button>
-					<button
-						onclick="handleModal('brackets')"
-						id="closeButton"
-						class="w-25 mt-4"
-					>
-						Cerrar
-					</button>
-				</div>
-			</div>
-		</div>
+        <div class="col-12 text-center">
+          <button class="w-50 mt-0">Final Ganadores</button>
+        </div>
 
-		<script>
-			document.getElementById("cuartos").addEventListener("click", () => {
-				window.location.href = "quarterFinals.html"; // Redirect to the page for starting a new tournament
-			});
-		</script>
+        <div class="col-12 text-center">
+          <button id="cuartos_finishButton" class="w-25 mt-4">
+            Cargar Jugadores
+          </button>
+          <button
+            onclick="handleModal('brackets')"
+            id="closeButton"
+            class="w-25 mt-4"
+          >
+            Cerrar
+          </button>
+        </div>
+      </div>
+    </div>
 
-		<script>
-			let handleModal = (id) => {
-				let modal = document.getElementById(id);
-				if (modal.style.display === "none") {
-					modal.style.display = "block";
-				} else {
-					modal.style.display = "none";
-				}
-			};
-		</script>
+    <script>
+      document.getElementById("cuartos").addEventListener("click", () => {
+        window.location.href = "quarterFinals.html";
+      });
+    </script>
 
-		<script
-			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-			integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-			crossorigin="anonymous"
-		></script>
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-			integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-			crossorigin="anonymous"
-		></script>
+    <script>
+      document.getElementById("semis").addEventListener("click", () => {
+        window.location.href = "semiFinals.html";
+      });
+    </script>
 
-		<script type="module">
-			import { initializeApp } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-app.js";
-			import { getAuth } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-auth.js";
-			import { getFirestore } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore.js";
-			import { firebaseConfig } from "./firebaseConfig.js";
+    <script>
+      let handleModal = (id) => {
+        let modal = document.getElementById(id);
+        if (modal.style.display === "none") {
+          modal.style.display = "block";
+        } else {
+          modal.style.display = "none";
+        }
+      };
+    </script>
 
-			// Initialize Firebase
-			const app = initializeApp(firebaseConfig);
-			const auth = getAuth(app);
-			const db = getFirestore(app);
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
 
-			// Make auth and db available globally
-			window.auth = auth;
-			window.db = db;
-		</script>
+    <script type="module">
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-app.js";
+      import { getAuth } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-auth.js";
+      import { getFirestore } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore.js";
+      import { firebaseConfig } from "./firebaseConfig.js";
 
-		<!-- Custom JS -->
-		<script type="module" src="players.js"></script>
-		<script type="module" src="index.js"></script>
-		<script type="module" src="tournamentManagment.js"></script>
-	</body>
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const auth = getAuth(app);
+      const db = getFirestore(app);
+
+      // Make auth and db available globally
+      window.auth = auth;
+      window.db = db;
+    </script>
+
+    <!-- Custom JS -->
+    <script type="module" src="players.js"></script>
+    <script type="module" src="tournamentManagment.js"></script>
+    <script type="module" src="fetchPlayers.js"></script>
+  </body>
 </html>
