--- a/tercerCuarto.html
+++ b/tercerCuarto.html
@@ -21,7 +21,7 @@
         <div class="col-lg-6 col-12 text-center">
           <h1 class="mt-4">Tercer Cuarto</h1>
           <button
-            onclick="handleModal('modal_1')"
+            onclick="handleModal('modal')"
             id="player_1"
             class="btn btn-primary mt-3 w-50"
           >
@@ -35,8 +35,8 @@
       </div>
     </div>
 
-    <!-- MODAL PLAYER 1 -->
-    <div class="container-fluid modalCont" id="modal_1">
+    <!-- MODAL ALL PLAYERS -->
+    <div class="container-fluid modalCont" id="modal">
       <div class="row modalBox">
         <div class="col-12 text-center">Player 1</div>
         <div class="col-4">
@@ -230,7 +230,7 @@
             Cargar Score
           </button>
           <button
-            onclick="handleModal('modal_1')"
+            onclick="handleModal('modal')"
             id="closeButton"
             class="w-25 mt-4"
           >
