--- a/semiFinals.html
+++ b/semiFinals.html
@@ -21,28 +21,28 @@
         <div class="col-lg-6 col-12 text-center">
           <h1 class="mt-4">Semifinales</h1>
           <button
-            onclick="handleModal('modal')"
+            onclick="handleModal('modal', 1)"
             id="player_1"
             class="btn btn-primary mt-3 w-50"
           >
             Player 1
           </button>
           <button
-            onclick="handleModal('modal')"
+            onclick="handleModal('modal', 2)"
             id="player_2"
             class="btn btn-primary mt-3 w-50"
           >
             Player 2
           </button>
           <button
-            onclick="handleModal('modal')"
+            onclick="handleModal('modal', 3)"
             id="player_3"
             class="btn btn-primary mt-3 w-50"
           >
             Player 3
           </button>
           <button
-            onclick="handleModal('modal')"
+            onclick="handleModal('modal', 4)"
             id="player_4"
             class="btn btn-primary mt-3 w-50"
           >
@@ -259,9 +259,21 @@
     </div>
 
     <script>
-      let handleModal = (id) => {
+      let handleModal = (id, playerNumber) => {
         let modal = document.getElementById(id);
-        if (modal.style.display === "none") {
+        let inputs = modal.querySelectorAll("input");
+
+        // Cambia los IDs de los inputs según el jugador seleccionado
+        inputs.forEach((input, index) => {
+          input.id = `h${index + 1}_player${playerNumber}`;
+        });
+
+        // Actualiza el título del modal para reflejar el jugador seleccionado
+        let title = modal.querySelector(".col-12.text-center");
+        title.textContent = `Player ${playerNumber}`;
+
+        // Alterna la visibilidad del modal
+        if (modal.style.display === "none" || modal.style.display === "") {
           modal.style.display = "block";
         } else {
           modal.style.display = "none";
