--- a/home.html
+++ b/home.html
@@ -16,14 +16,22 @@
 		<div class="container mt-5">
 			<div class="row mt-5">
 				<div class="col-lg-3 col-12"></div>
-				<div class="col-lg-6 col-12 text-center">
+				<div class="col-lg-6 col-12 text-center box">
 					<h1 class="mt-5">Admin Home</h1>
-					<button id="startNewTournament" class="btn btn-primary mt-5">
-						Start a New Tournament
-					</button>
-					<button id="manageTournament" class="btn btn-secondary mt-5">
-						Manage Tournament
-					</button>
+					<div style="display: flex">
+						<button
+							id="startNewTournament"
+							class="btn btn-primary mt-5 w-50 mx-2"
+						>
+							Start a New Tournament
+						</button>
+						<button
+							id="manageTournament"
+							class="btn btn-secondary mt-5 w-50 mx-2"
+						>
+							Manage Tournament
+						</button>
+					</div>
 				</div>
 				<div class="col-lg-3 col-12"></div>
 			</div>
