--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-3 col-12"></div>
-				<div class="col-lg-6 col-12">
-					<h1 class="mt-5">Firebase Login</h1>
+				<div class="col-lg-6 col-12 box">
+					<h1 class="mt-5" style="text-align: center">Firebase Login</h1>
 					<div class="form-group mt-4">
 						<label for="email">Email:</label>
 						<input type="email" class="form-control" id="email" />
@@ -26,8 +26,14 @@
 						<label for="password">Password:</label>
 						<input type="password" class="form-control" id="password" />
 					</div>
-					<button id="login" class="btn btn-primary mt-4">Login</button>
-					<button id="signup" class="btn btn-secondary mt-4">Sign Up</button>
+					<div style="display: flex">
+						<button id="login" class="btn btn-primary mt-4 w-50 mx-2">
+							Login
+						</button>
+						<button id="signup" class="btn btn-secondary mt-4 w-50 mx-2">
+							Sign Up
+						</button>
+					</div>
 				</div>
 				<div class="col-lg-3 col-12"></div>
 			</div>
