--- a/quarterFinals.html
+++ b/quarterFinals.html
@@ -74,6 +74,13 @@
 					>
 						Player 8
 					</button>
+					<button
+						onclick="goBack('brackets')"
+						id="g_back"
+						class="btn btn-secondary mt-5 w-50"
+					>
+						Go back
+					</button>
 				</div>
 				<div class="col-lg-3 col-12"></div>
 			</div>
@@ -86,84 +93,175 @@
 				<div class="col-4">
 					<div style="display: flex; margin-top: 1em">
 						<p class="mx-2">Hoyo 1:</p>
-						<input class="w-25" style="height: 2rem" type="text" name="" />
+						<input
+							class="w-25 score-input"
+							style="height: 2rem"
+							type="text"
+							name=""
+						/>
 					</div>
 					<div style="display: flex; margin-top: 1em">
 						<p class="mx-2">Hoyo 2:</p>
-						<input class="w-25" style="height: 2rem" type="text" name="" />
+						<input
+							class="w-25 score-input"
+							style="height: 2rem"
+							type="text"
+							name=""
+						/>
 					</div>
 					<div style="display: flex; margin-top: 1em">
 						<p class="mx-2">Hoyo 3:</p>
-						<input class="w-25" style="height: 2rem" type="text" name="" />
+						<input
+							class="w-25 score-input"
+							style="height: 2rem"
+							type="text"
+							name=""
+						/>
 					</div>
 					<div style="display: flex; margin-top: 1em">
 						<p class="mx-2">Hoyo 4:</p>
-						<input class="w-25" style="height: 2rem" type="text" name="" />
+						<input
+							class="w-25 score-input"
+							style="height: 2rem"
+							type="text"
+							name=""
+						/>
 					</div>
 					<div style="display: flex; margin-top: 1em">
 						<p class="mx-2">Hoyo 5:</p>
-						<input class="w-25" style="height: 2rem" type="text" name="" />
+						<input
+							class="w-25 score-input"
+							style="height: 2rem"
+							type="text"
+							name=""
+						/>
 					</div>
 					<div style="display: flex; margin-top: 1em">
 						<p class="mx-2">Hoyo 6:</p>
-						<input class="w-25" style="height: 2rem" type="text" name="" />
+						<input
+							class="w-25 score-input"
+							style="height: 2rem"
+							type="text"
+							name=""
+						/>
 					</div>
 				</div>
 				<div class="col-4">
 					<div style="display: flex; margin-top: 1em">
 						<p class="mx-2">Hoyo 7:</p>
-						<input class="w-25" style="height: 2rem" type="text" name="" />
+						<input
+							class="w-25 score-input"
+							style="height: 2rem"
+							type="text"
+							name=""
+						/>
 					</div>
 					<div style="display: flex; margin-top: 1em">
 						<p class="mx-2">Hoyo 8:</p>
-						<input class="w-25" style="height: 2rem" type="text" name="" />
+						<input
+							class="w-25 score-input"
+							style="height: 2rem"
+							type="text"
+							name=""
+						/>
 					</div>
 					<div style="display: flex; margin-top: 1em">
 						<p class="mx-2">Hoyo 9:</p>
-						<input class="w-25" style="height: 2rem" type="text" name="" />
+						<input
+							class="w-25 score-input"
+							style="height: 2rem"
+							type="text"
+							name=""
+						/>
 					</div>
 					<div style="display: flex; margin-top: 1em">
 						<p class="mx-2">Hoyo 10:</p>
-						<input class="w-25" style="height: 2rem" type="text" name="" />
+						<input
+							class="w-25 score-input"
+							style="height: 2rem"
+							type="text"
+							name=""
+						/>
 					</div>
 					<div style="display: flex; margin-top: 1em">
 						<p class="mx-2">Hoyo 11:</p>
-						<input class="w-25" style="height: 2rem" type="text" name="" />
+						<input
+							class="w-25 score-input"
+							style="height: 2rem"
+							type="text"
+							name=""
+						/>
 					</div>
 					<div style="display: flex; margin-top: 1em">
 						<p class="mx-2">Hoyo 12:</p>
-						<input class="w-25" style="height: 2rem" type="text" name="" />
+						<input
+							class="w-25 score-input"
+							style="height: 2rem"
+							type="text"
+							name=""
+						/>
 					</div>
 				</div>
 				<div class="col-4">
 					<div style="display: flex; margin-top: 1em">
 						<p class="mx-2">Hoyo 13:</p>
-						<input class="w-25" style="height: 2rem" type="text" name="" />
+						<input
+							class="w-25 score-input"
+							style="height: 2rem"
+							type="text"
+							name=""
+						/>
 					</div>
 					<div style="display: flex; margin-top: 1em">
 						<p class="mx-2">Hoyo 14:</p>
-						<input class="w-25" style="height: 2rem" type="text" name="" />
+						<input
+							class="w-25 score-input"
+							style="height: 2rem"
+							type="text"
+							name=""
+						/>
 					</div>
 					<div style="display: flex; margin-top: 1em">
 						<p class="mx-2">Hoyo 15:</p>
-						<input class="w-25" style="height: 2rem" type="text" name="" />
+						<input
+							class="w-25 score-input"
+							style="height: 2rem"
+							type="text"
+							name=""
+						/>
 					</div>
 					<div style="display: flex; margin-top: 1em">
 						<p class="mx-2">Hoyo 16:</p>
-						<input class="w-25" style="height: 2rem" type="text" name="" />
+						<input
+							class="w-25 score-input"
+							style="height: 2rem"
+							type="text"
+							name=""
+						/>
 					</div>
 					<div style="display: flex; margin-top: 1em">
 						<p class="mx-2">Hoyo 17:</p>
-						<input class="w-25" style="height: 2rem" type="text" name="" />
+						<input
+							class="w-25 score-input"
+							style="height: 2rem"
+							type="text"
+							name=""
+						/>
 					</div>
 					<div style="display: flex; margin-top: 1em">
 						<p class="mx-2">Hoyo 18:</p>
-						<input class="w-25" style="height: 2rem" type="text" name="" />
+						<input
+							class="w-25 score-input"
+							style="height: 2rem"
+							type="text"
+							name=""
+						/>
 					</div>
 				</div>
 				<div class="col-12 text-center">
 					<div style="display: flex; margin-bottom: 1em">
 						<button
+							onclick="collectScores()"
 							id="cuartos_finishButton"
 							class="w-25 mt-4 btn btn-primary mx-2 w-50"
 						>
@@ -185,6 +283,54 @@
 		<script type="module" src="tournamentManagment.js"></script>
 		<script type="module" src="fetchPlayers.js"></script>
 		<script type="module" src="fetchScores.js"></script>
+
+		<script>
+			function collectScores() {
+				// Selecciona todos los inputs de puntuación
+				const inputs = document.querySelectorAll(".score-input");
+
+				// Objeto para almacenar los valores
+				const scores = {};
+
+				// Recorre todos los inputs y los guarda en el objeto
+				inputs.forEach((input, index) => {
+					// Asigna el valor del input al objeto usando el número del hoyo como clave
+					scores[`hoyo${index + 1}`] = input.value.trim();
+				});
+
+				console.log(scores); // Para ver el objeto en la consola (puedes eliminar esto)
+				return scores; // Retorna el objeto con los valores
+			}
+		</script>
+
+		<script>
+			document.addEventListener("DOMContentLoaded", function () {
+				// Selecciona todos los inputs de puntuación
+				const inputs = document.querySelectorAll(".score-input");
+				const submitButton = document.getElementById("cuartos_finishButton");
+
+				// Función para verificar si algún input tiene valor
+				function checkInputs() {
+					let hasValue = false;
+					inputs.forEach((input) => {
+						if (input.value.trim() !== "") {
+							hasValue = true;
+						}
+					});
+
+					// Habilita o deshabilita el botón según haya un valor
+					submitButton.disabled = !hasValue;
+				}
+
+				// Agrega un listener a cada input para detectar cambios
+				inputs.forEach((input) => {
+					input.addEventListener("input", checkInputs);
+				});
+
+				// Inicialmente deshabilitar el botón
+				submitButton.disabled = true;
+			});
+		</script>
 
 		<script type="module">
 			import { initializeApp } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-app.js";
@@ -226,6 +372,11 @@
 			};
 			window.handleModal = handleModal;
 		</script>
+		<script>
+			let goBack = () => {
+				window.location.href = "tournamentManagment.html";
+			};
+		</script>
 
 		<script>
 			function handleModal(id, playerNumber) {
@@ -244,5 +395,7 @@
 			integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
 			crossorigin="anonymous"
 		></script>
+		<script type="module" src="tournamentManagment.js"></script>
+		<script type="module" src="processScores.js"></script>
 	</body>
 </html>
